<resources>
    <string name="app_name">Tango Player</string>
    <string name="error_msg_no_acccess_to_anki_db">No Access to AnkiDroid DB. Check AnkiDroid is allow to access the storage.</string>
    <string name="error_msg_no_write_storage_permission">The permission to access your storage was NOT granted. Please tap [ALLOW].</string>
    <string name="error_msg_no_write_anki_db_permission">The permission to access your AnkiDroid DB was NOT granted. Please tap [ALLOW].</string>
    <string name="error_invalid_video_file">The Video file path is invalid. Choose another video file again.</string>
    <string name="warning_msg_no_network">No Network. Put the translation manually.</string>
    <string name="info_msg_anki_card_is_added">The card was added.</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="ImageButton_Play">Play video</string>
    <string name="ImageButton_Pause">Pause video</string>
    <string name="ImageButton_Rewind">Rewind video</string>
    <string name="ImageButton_FastForward">Fast forward video</string>
    <string name="ImageButton_Previous">Previous forward video</string>
    <string name="ImageButton_Next">Next video</string>
    <string name="ImageButton_Setting">Setting</string>
    <string name="ImageButton_Folder">Choose another video</string>
    <string name="ImageButton_SubtitleFastForward">Subtitle fast forward</string>
    <string name="ImageButton_SubtitleRewind">Subtitle rewind</string>
    <string name="ImageButton_Translate">Translate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="EditText_word">Word</string>
    <string name="EditText_sentence">Sentence</string>
    <string name="EditText_word_meaning">Word meaning</string>
    <string name="EditText_sentence_meaning">Sentence meaning</string>
    <string name="pref_translation_language_default">ja</string>
    <string name="pref_deck_name_default">tango</string>
    <string name="key_list_translation_language">KeyListTranslationLanguage</string>
    <string name="key_list_deck_name">KeyListDeckName</string>
    <string name="key_license">KeyLicense</string>
    <string name="key_send_feedback">KeySendFeedback</string>
    <string name="key_version">KeyVersion</string>
    <string name="pref_licenses">Licenses</string>
    <string name="flowlayout">FlowLayout</string>
    <string name="subtitle_converter">Subtitle Converter</string>
    <string name="material_design_icon">Material Design (icon)</string>
    <string name="android_support_library">Android Support Library</string>
    <string name="android_constraint_layout">Android ConstraintLayout</string>
    <string name="nononsense_filepicker">NoNonsense-FilePicker</string>
    <string name="juniversalchardet">juniversalchardet</string>
    <string name="licenses_dialog">LicensesDialog</string>
    <string name="json_in_java">JSON In Java</string>
    <string name="ankidroid_api">AnkiDroid API</string>
    <string name="lib_vlc">libVLC</string>
    <string name="easyfeedback">EasyFeedback</string>
</resources>