<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_licenses">
    <Preference android:title="@string/flowlayout"
        android:key="@string/flowlayout"/>
    <Preference android:title="@string/subtitle_converter"
        android:key="@string/subtitle_converter"/>
    <Preference android:title="@string/material_design_icon"
        android:key="@string/material_design_icon"/>
    <Preference android:title="@string/android_support_library"
        android:key="@string/android_support_library"/>
    <Preference android:title="@string/android_constraint_layout"
        android:key="@string/android_constraint_layout"/>
    <Preference android:title="@string/MaterialFilePicker"
        android:key="@string/MaterialFilePicker"/>
    <Preference android:title="@string/juniversalchardet"
        android:key="@string/juniversalchardet"/>
    <Preference android:title="@string/licenses_dialog"
        android:key="@string/licenses_dialog"/>
    <Preference android:title="@string/json_in_java"
        android:key="@string/json_in_java"/>
    <Preference android:title="@string/ankidroid_api"
        android:key="@string/ankidroid_api"/>
    <Preference android:title="@string/lib_vlc"
        android:key="@string/lib_vlc"/>
    <Preference android:title="@string/material_show_case"
        android:key="@string/material_show_case"/>
    <Preference android:title="@string/tango_player"
        android:key="@string/tango_player"/>
</PreferenceScreen>
